# braque

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: scramble.rs  unscramble.rs
src/: cipher.rs  lib.rs  prng.rs  scramble.rs  shuffle.rs
tests/: integration_test.rs
